# advent-of-code

./: .gitignore  README.md  post-mortem.txt
2019/: files.sh  main_template.hs  makefile  puzzle_template.hs  test_template.hs  x2019.cabal
2019/01/: goal_2019_01.txt  main_2019_01.hs  makefile  puzzle_2019_01.hs  test_2019_01.hs
2019/02/: goal_2019_02.txt  main_2019_02.hs  makefile  puzzle_2019_02.hs  test_2019_02.hs
2019/03/: goal_2019_03.txt  main_2019_03.hs  makefile  puzzle_2019_03.hs  test_2019_03.hs
2019/04/: goal_2019_04.txt  main_2019_04.hs  makefile  puzzle_2019_04.hs  test_2019_04.hs
2019/05/: goal_2019_05.txt  main_2019_05.hs  makefile  puzzle_2019_05.hs  test_2019_05.hs
2019/06/: goal_2019_06.txt  main_2019_06.hs  makefile  puzzle_2019_06.hs  test_2019_06.hs
2019/07/: goal_2019_07.txt  main_2019_07.hs  makefile  puzzle_2019_07.hs  test_2019_07.hs
2019/08/: goal_2019_08.txt  main_2019_08.hs  makefile  puzzle_2019_08.hs  test_2019_08.hs
2019/09/: goal_2019_09.txt  main_2019_09.hs  makefile  puzzle_2019_09.hs  test_2019_09.hs
2019/10/: goal_2019_10.txt  main_2019_10.hs  makefile  puzzle_2019_10.hs  test_2019_10.hs
2019/11/: goal_2019_11.txt  main_2019_11.hs  makefile  puzzle_2019_11.hs  test_2019_11.hs
2019/12/: goal_2019_12.txt  main_2019_12.hs  makefile  puzzle_2019_12.hs  test_2019_12.hs
2019/13/: goal_2019_13.txt  main_2019_13.hs  makefile  puzzle_2019_13.hs  sneakier_input.txt  sneaky_input.txt  test_2019_13.hs
2019/14/: goal_2019_14.txt  main_2019_14.hs  makefile  puzzle_2019_14.hs  test_2019_14.hs
2019/15/: goal_2019_15.txt  main_2019_15.hs  makefile  puzzle_2019_15.hs  test_2019_15.hs
2019/16/: goal_2019_16.txt  main_2019_16.hs  makefile  puzzle_2019_16.hs  test_2019_16.hs
2019/17/: goal_2019_17.txt  main_2019_17.hs  makefile  manual_track.txt  manual_track_v2.txt  puzzle_2019_17.hs  test_2019_17.hs
2019/18/: goal_2019_18.txt  input_b.txt  main_2019_18.hs  makefile  puzzle_2019_18.hs  test_2019_18.hs
2019/19/: goal_2019_19.txt  main_2019_19.hs  makefile  puzzle_2019_19.hs  test_2019_19.hs
2019/20/: goal_2019_20.txt  main_2019_20.hs  makefile  puzzle_2019_20.hs  test_2019_20.hs
2019/21/: goal_2019_21.txt  main_2019_21.hs  makefile  puzzle_2019_21.hs  test_2019_21.hs
2019/22/: goal_2019_22.txt  main_2019_22.hs  makefile  puzzle_2019_22.hs  test_2019_22.hs
2019/23/: goal_2019_23.txt  main_2019_23.hs  makefile  puzzle_2019_23.hs  test_2019_23.hs
2019/24/: goal_2019_24.txt  main_2019_24.hs  makefile  puzzle_2019_24.hs  test_2019_24.hs
2019/25/: goal_2019_25.txt  main_2019_25.hs  makefile  puzzle_2019_25.hs  test_2019_25.hs
2019/libraries/: cookie.hs  diary_of_intcode.txt  grid.hs  intcode.hs  parsing.hs  unified_intcode_tests.hs  utilities.hs
2020/: files.sh  main_template.hs  puzzle_template.hs  test_template.hs  x2020.cabal
2020/01/: goal_2020_01.txt  main_2020_01.hs  puzzle_2020_01.hs  test_2020_01.hs
2020/02/: goal_2020_02.txt  main_2020_02.hs  puzzle_2020_02.hs  test_2020_02.hs
2020/03/: goal_2020_03.txt  main_2020_03.hs  puzzle_2020_03.hs  test_2020_03.hs
2020/04/: goal_2020_04.txt  main_2020_04.hs  puzzle_2020_04.hs  test_2020_04.hs
2020/05/: goal_2020_05.txt  main_2020_05.hs  puzzle_2020_05.hs  test_2020_05.hs
2020/06/: goal_2020_06.txt  main_2020_06.hs  puzzle_2020_06.hs  test_2020_06.hs
2020/07/: goal_2020_07.txt  main_2020_07.hs  puzzle_2020_07.hs  test_2020_07.hs
2020/08/: goal_2020_08.txt  main_2020_08.hs  puzzle_2020_08.hs  test_2020_08.hs
2020/09/: goal_2020_09.txt  main_2020_09.hs  puzzle_2020_09.hs  test_2020_09.hs
2020/10/: goal_2020_10.txt  main_2020_10.hs  puzzle_2020_10.hs  test_2020_10.hs
2020/11/: goal_2020_11.txt  main_2020_11.hs  puzzle_2020_11.hs  test_2020_11.hs
2020/12/: goal_2020_12.txt  main_2020_12.hs  puzzle_2020_12.hs  test_2020_12.hs
2020/13/: goal_2020_13.txt  main_2020_13.hs  puzzle_2020_13.hs  test_2020_13.hs
2020/14/: goal_2020_14.txt  main_2020_14.hs  puzzle_2020_14.hs  test_2020_14.hs
2020/15/: goal_2020_15.txt  main_2020_15.hs  puzzle_2020_15.hs  test_2020_15.hs
2020/16/: goal_2020_16.txt  main_2020_16.hs  puzzle_2020_16.hs  test_2020_16.hs
2020/17/: goal_2020_17.txt  main_2020_17.hs  puzzle_2020_17.hs  test_2020_17.hs
2020/18/: goal_2020_18.txt  main_2020_18.hs  puzzle_2020_18.hs  test_2020_18.hs
2020/19/: goal_2020_19.txt  main_2020_19.hs  puzzle_2020_19.hs  test_2020_19.hs
2020/20/: goal_2020_20.txt  main_2020_20.hs  puzzle_2020_20.hs  test_2020_20.hs
2020/21/: goal_2020_21.txt  main_2020_21.hs  puzzle_2020_21.hs  test_2020_21.hs
2020/22/: goal_2020_22.txt  main_2020_22.hs  puzzle_2020_22.hs  test_2020_22.hs
2020/23/: goal_2020_23.txt  main_2020_23.hs  puzzle_2020_23.hs  puzzle_mutable_list.py  test_2020_23.hs
2020/24/: goal_2020_24.txt  main_2020_24.hs  puzzle_2020_24.hs  test_2020_24.hs
2020/25/: goal_2020_25.txt  main_2020_25.hs  puzzle_2020_25.hs  test_2020_25.hs
2020/libraries/: utilities.hs
2023/: files.sh  fixup_list.txt  main_template.hs  puzzle_template.hs  test_template.hs  x2023.cabal
2023/01/: goal_2023_01.txt  main_2023_01.hs  overlap_test.txt  puzzle_2023_01.hs  test_2023_01.hs
2023/02/: goal_2023_02.txt  main_2023_02.hs  puzzle_2023_02.hs  test_2023_02.hs
2023/03/: goal_2023_03.txt  main_2023_03.hs  puzzle_2023_03.hs  test_2023_03.hs
2023/04/: goal_2023_04.txt  main_2023_04.hs  puzzle_2023_04.hs  test_2023_04.hs
2023/05/: goal_2023_05.txt  main_2023_05.hs  puzzle_2023_05.hs  test_2023_05.hs
2023/06/: goal_2023_06.txt  main_2023_06.hs  puzzle_2023_06.hs  test_2023_06.hs
2023/07/: goal_2023_07.txt  main_2023_07.hs  puzzle_2023_07.hs  test_2023_07.hs
2023/08/: goal_2023_08.txt  main_2023_08.hs  puzzle_2023_08.hs  test_2023_08.hs
2023/09/: goal_2023_09.txt  main_2023_09.hs  puzzle_2023_09.hs  test_2023_09.hs
2023/10/: goal_2023_10.txt  main_2023_10.hs  puzzle_2023_10.hs  test_2023_10.hs  test_input_7.txt
2023/11/: goal_2023_11.txt  main_2023_11.hs  puzzle_2023_11.hs  test_2023_11.hs
2023/12/: goal_2023_12.txt  main_2023_12.hs  puzzle_2023_12.hs  test_2023_12.hs
2023/13/: goal_2023_13.txt  (+3 more)
(+756 files in other folders)
